icon & alignment fixed

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -102,6 +102,7 @@
 .service-content-wrapper {
   .service-summary {
     display: flex;
+    justify-content: center;
     background: #ffffff;
     padding: 0px 20px ;
     border-radius: 6px;
